--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   fluttertoast: ^8.2.3
   flutter_gradient_colors: ^2.1.1
   flutter_bloc: ^8.1.3
+  flutter_screenutil: ^5.9.0
 
 dev_dependencies:
   flutter_test:
