--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_gradient_colors: ^2.1.1
   flutter_bloc: ^8.1.3
   flutter_screenutil: ^5.9.0
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_test:
