--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   devicelocale: ^0.7.0
   dio: ^5.3.3
   hive: ^2.2.3
+  flutter_svg: ^2.0.9
   path_provider: ^2.1.1
   logger: ^2.0.2+1
   device_info_plus: ^9.1.0
