--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_screenutil: ^5.9.0
   carousel_slider: ^4.0.0
+  flutter_html: ^3.0.0-alpha.6
 
 dev_dependencies:
   flutter_test:
